[package]
name = "southpaw"
description = "Allows userspace emulation of evdev character devices."
edition = "2021"
version = "0.1.0"
authors = ["Colin Marc <hi@colinmarc.com>"]
license = "MIT"

[dependencies.fuser]
git = "https://github.com/colinmarc/fuser"
rev = "1e22afdb868a86afd20ce598aec6e634a9fdc603"
default-features = false
features = ["abi-7-11"]

[dependencies.rustix]
version = "0.38"
features = ["process", "time"]

[dependencies]
bit-vec = "0.8"
libc = "0.2"
log = "0.4"
num_enum = "0.7"
parking_lot = "0.12"
seq-macro = "0.3.5"
thunderdome = "0.6"
uapi = "0.2"

[dev-dependencies]
env_logger = "0.11"
evdev = "0.12"
tempfile = "3"

[build-dependencies]
bindgen = "0.70"
rustix = { version = "0.38", features = ["system"] }
semver = "1"
